# mixingpartner

./: CLAUDE.md  README.md
logic-mix-os/: .gitignore  COWORK_CONTRACT.md  README.md  conftest.py  pyproject.toml
logic-mix-os/examples/: project_manifest.example.json
logic-mix-os/fixtures/: __init__.py  generate_fixtures.py
logic-mix-os/logic_mix_os/: __init__.py  album.py  apply_harness.py  apply_manifest.py  apply_sandbox.py  cli.py  constants.py  cowork.py  creative.py  dsp.py  governance.py  governance_kernel.py  governance_ledger.py  logic_action_payload.py  logic_planner.py  memory.py  pipeline.py  project.py  regression.py  render_ingest.py  review_workflow.py  session_adapter.py  variant_renderer.py
logic-mix-os/tests/: test_album_context.py  test_apply_harness.py  test_apply_harness_packet.py  test_apply_manifest.py  test_apply_sandbox.py  test_audio_metrics.py  test_beat_identity.py  test_bridge.py  test_cli.py  test_confirmed_revert.py  test_confirmed_revert_live.py  test_cowork.py  test_cowork_contract.py  test_cowork_record.py  test_cowork_session_flow.py  test_cowork_session_walkthrough.py  test_creative.py  test_creative_attribution.py  test_creative_nudge_visibility.py  test_creative_nudges.py  test_creative_profile_sourced.py  test_creative_scoring.py  test_dashboard.py  test_decision_packet.py  test_decisive_nudge.py  test_density_recuration.py  test_doctrine_engine.py  test_doctrine_profile_sourced.py  test_doctrine_regression.py  test_expanded_analysis.py  test_governance.py  test_governance_kernel.py  test_governance_ledger.py  (+32 more)
(+163 files in other folders)
